--- a/03. CSS & Typography/L3_04_Buttons-css/style.css
+++ b/03. CSS & Typography/L3_04_Buttons-css/style.css
@@ -24,12 +24,12 @@ a {
   color: rgb(251, 251, 251);
 }
 
-button:last-child:hover {
+button:hover {
   border: 2px solid rgb(0, 102, 0);
   color: rgb(0, 102, 0);
 }
 
-.fill:last-child:hover {
+.fill:hover {
   background-color: rgb(0, 102, 0);
   color: rgb(251, 251, 251);
 }
